Daniel fixes categories reveal on cart page on mobile view

--- a/frontend/css/cart-devices.css
+++ b/frontend/css/cart-devices.css
@@ -65,9 +65,8 @@ header {
   align-items: center;
   justify-content: center;
 
-  width: 160px;
+  width: 100%;
   color: black;
-  padding-left: 10px;
   font-family: Raleway, sans-serif;
   text-decoration: none;
 
